--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.6",
+    "@types/uuid": "^10.0.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.41.1",
     "bcryptjs": "^3.0.2",
@@ -47,7 +48,8 @@
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
     "stripe": "^17.7.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
